# FreeSR

./: .gitignore  CMakeLists.txt  README.md
example/: english.pcm  freesr-example.cc  freesr-gender-example.cc  freesr-ivector-example.cc  freesr-ubm-example.cc  freesr-ubm-gender-example.cc  freesr-xvector-example.cc  freesr-xvector-gender-example.cc
freesr-android/com/freesr/: FreeSpeakerRecognitionJNI.java  RecInfo.java  SpeakerGenderRecognizer.java  SpeakerRecognizer.java
freesr-cpp/: CMakeLists.txt
freesr-cpp/example/: freesr-example.cc  freesr-gender-example.cc
freesr-cpp/include/: common.h  speaker_gender_recognizer.h  speaker_recognizer.h
freesr-cpp/lib/: freesr.lib
freesr-java/: SpeakerGenderRecognizerExample.java  SpeakerRecognizerExample.java  SpeakerRecognizerExampleStress.java
freesr-java/com/freesr/: FreeSpeakerRecognition.java
include/: common.h  speaker_gender_recognizer.h  speaker_recognizer.h  speaker_recognizer_gmm.h  speaker_recognizer_ivector.h  speaker_recognizer_xvector.h  speech_features.h
include/eigen3/: readme.txt
java/: SpeakerGenderRecognizerExample.java  SpeakerRecognizerExample.java
java/com/freesr/: ArrayListDouble.java  FreeSpeakerRecognitionJNI.java  SpeakerGenderRecognizer.java  SpeakerRecognizer.java
lib/: freesr.lib
models/: female.model  male.model
